kube-todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-todo
spec:
  selector:
    matchLabels:
      app: kube-todo
  template:
    metadata:
      labels:
        app: kube-todo
    spec:
      containers:
      - name: kube-todo
        image: lonias/kube-todo:0.0.1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
            ephemeral-storage: "256Mi"
