kube-todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-todo
spec:
  type: NodePort
  selector:
    app: kube-todo
  ports:
  - nodePort: 30080
    port: 1235
    targetPort: 3000
